# mouseutils

./: LICENSE  README.md  install.sh  pyproject.toml
src/mouseutils/: __init__.py  __main__.py  app.py
