[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mouseutils"
version = "0.1.0"
description = "Mouse color picker utility"
authors = [{ name = "panadalpro" }]
requires-python = ">=3.9"
dependencies = [
    "customtkinter>=5.2.2",
    "mss>=9.0.1",
    "pyautogui>=0.9.54",
]

[project.urls]
Homepage = "https://panadalpro.github.io/"

[project.scripts]
mouseutils = "mouseutils.__main__:main"   # <- `mouseutils` in terminal
